# Chunky

./: .gitignore  README.md  pyproject.toml  setup.cfg  upload.py
src/chunky/: __init__.py  chunk.py  errors.py  world.py
