[metadata]
# replace with your username:
name = hamolicious-chunky
version = 1.0.0
author = Hamolicous
# author_email = author@example.com TODO
description = A chunking system for game developement
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamolicious/Vector-Class
project_urls =
    Bug Tracker = https://github.com/hamolicious/Vector-Class/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
