[metadata]
# replace with your username:
name = hamolicious-chunky
version = 1.1.1
author = Hamolicous
author_email = hamolicious@protonmail.com
description = A chunking system for game development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamolicious/Chunky
project_urls =
    Bug Tracker = https://github.com/hamolicious/Chunky/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
